Frontend/trivializer/src/components/GamesList.css
/* Styles GamesList.css */
.gameslist-container {
  display: flex;
  flex-wrap: wrap;
}

.game-container {
  width: 350px;
  height: 350px;
  margin: 20px 10px 10px 20px;
}

.game-container .game-link {
  color: black;
  text-decoration: none;
}

.game-container .newgame-link {
  text-decoration: none;
  font-size: 24px;
  margin: 0 auto;
}

.game-summary {
  border: 2px solid black;
  border-radius: 10px;
  margin: auto;
  display: flex;
  flex-flow: column;
  justify-content: center;
  height: 275px;
  width: 275px;
  transition: width 0.5s, height 0.5s, transform 0.5s;
}

.game-summary:hover {
  width: 300px;
  height: 300px;
}

.game-delete {
  margin: 10px auto;
  width: 100px;
  border-radius: 10px;
}

.game-delete:hover {
  box-shadow: 2px 2px;
  background: #ee4432;
  color: white;
  cursor: pointer;
}

.gamelist-container {
  display: flex;
}

.game-description {
  border: 2px solid lightskyblue;
  border-radius: 10px;
  padding: 2%;
  word-wrap: break-word;
  margin: 10px 20px;
  height: 100px;
  text-align: left;
}

.addnewGame {
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.gamelist {
  display: flex;
  justify-content: center;
  padding-top: 0;
}

.addnewGame h3 {
  font-size: 60px;
}

.fas {
  color: black;
  font-size: 90px;
}

.fas:hover {
  color: #b13c2d;
  cursor: pointer;
}

